# beancount-helper

./: .gitignore  CHANGELOG.md  README-zh_cn.md  README.md  pyproject.toml  rules.example.txt
.github/workflows/: publish.yml  release-please.yml
src/beancount/: core.py
src/beancount_helper/: cli.py
src/beancount_helper/bill_resolver/: ccb.py
src/beancount_helper/transformer/: rule.py
src/bill_resolver/: wechat.py
test/: rule_matcher.py  test_beancount_core.py  test_rule_matcher.py
