[project]
name = "beancount-helper"
version = "0.1.0"
description = "A helper for the Beancount with support of bill excel resolve, auto matcher based rule."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "coverage>=7.15.2",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
