[project]
name = "beancount-helper"
version = "0.1.0"
description = "Convert bank statement Excel files to Beancount format with a rule-based account matching engine."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["openpyxl>=3.1.5", "pandas>=3.0.3", "xlrd>=2.0.2"]

[project.urls]
Repository = "https://github.com/FishCat233/beancount-helper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/beancount",
  "src/bill_resolver",
  "src/transformer",
  "src/beancount_helper",
]

[project.scripts]
beancount-helper = "beancount_helper.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = ["coverage>=7.15.2", "pytest>=9.1.1", "ruff>=0.15.22", "twine>=6.2.0"]
